fix too big gaps in text when |linebreaksbr

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -113,6 +113,7 @@ td.align-right {text-align: right;}
 
 
 
+
 /* ------------------------------------------------------------------------------------------------------------------ */
 /* ------------------------- */
 /* ----- TEXT & FONTS ----- */
@@ -140,10 +141,19 @@ small.smaller {font-size: 12px;}
 .small-caps {font-variant: small-caps;}
 
 
-
 @media only screen and (min-width: 600px) {
     .sm-nowrap {white-space: nowrap;}
 }
+
+/* This is for {{ some_text|linebreaksbr }} where <br><br> is rendered because
+in the text I use empty line for visual separations of paragraphs, and these is
+rendered as <br><br> making too much of a gap on page. */
+br + br {
+  display: block;
+  margin-top: 0.4rem;
+}
+
+
 
 
 /* ------------------------------------------------------------------------------------------------------------------ */
